--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,9 @@ spring.jpa.properties.hibernate.use_sql_comments=false
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=trace
 logging.level.org.hibernate.orm.jdbc.bind=trace
+spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
+spring.jpa.properties.javax.persistence.schema-generation.scripts.create-source=metadata
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
 
 server.error.include-stacktrace=never
